feat: add selects, add states, add close-on-click-outside

--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -55,3 +55,9 @@
 }
 
 /// remove later ////
+
+// .form {
+// 	display: flex;
+// 	flex-direction: column;
+// 	justify-content: space-between;
+// }
