--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -6,14 +6,31 @@
 	width: 210px;
 	height: 50px;
 	text-align: center;
+	background: var(--gold, #ffc802);
 	border: 1px solid #000000;
 	cursor: pointer;
+}
+
+.button:hover {
+	background: var(--gold, #ffedab);
 }
 
 .button:active {
 	background: var(--gold, #ffc802);
 }
 
-.button:hover {
-	background: var(--gold, #ffc802);
+.button_reset {
+	color: #000000;
+	background: #ffffff;
 }
+
+.button_reset:hover {
+	background: #ffffff;
+	filter: invert(1);
+}
+
+.button_reset:active {
+	color: #000000;
+	background: #ffffff;
+}
+
