--- a/src/components/select/Select.module.scss
+++ b/src/components/select/Select.module.scss
@@ -45,7 +45,7 @@
 
 .selectWrapper:not([data-is-active='true'])
 	.placeholder:not([data-status='invalid']):hover {
-	outline: 3px solid #000000;
+	outline: 1px solid #FFC802;
 }
 
 .select {
