--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -31,3 +31,12 @@
 	justify-content: space-between;
 	margin-top: auto;
 }
+
+.title {
+	display: inline-block;
+	margin-block-end: 50px;
+	font-weight: 800;
+	font-size: 31px;
+	font-family: 'Open Sans', sans-serif;
+	text-align: left;
+}
